Fixed Instagram icon gradient not showing on iOS devices

--- a/style.css
+++ b/style.css
@@ -141,12 +141,12 @@ main {
 }
 
 #instagram {
-    color: transparent;
+    color: rgba(255, 255, 255, 0);
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     background-clip: text;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 
 #github {
